--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/persnickety-vagabond/populr2-Worker/issues"
   },
-  "homepage": "https://github.com/persnickety-vagabond/populr2-Worker#readme"
+  "homepage": "https://github.com/persnickety-vagabond/populr2-Worker#readme",
+  "dependencies": {
+    "lodash": "^3.10.1",
+    "pg": "^4.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.6.0"
+  }
 }
