--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/persnickety-vagabond/populr2-Worker#readme",
   "dependencies": {
+    "bluebird": "^2.9.34",
     "lodash": "^3.10.1",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^3.6.0"
+    "sequelize": "^3.6.0",
+    "twitter": "^1.2.5"
   }
 }
