--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "bluebird": "^2.9.34",
     "lodash": "^3.10.1",
-    "pg": "^4.4.1",
-    "pg-hstore": "^2.3.2",
+    "mysql": "^2.9.0",
     "sequelize": "^3.6.0",
     "twitter": "^1.2.5"
   }
