--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/persnickety-vagabond/populr2-Worker#readme",
   "dependencies": {
     "bluebird": "^2.9.34",
+    "cheerio": "^0.19.0",
     "lodash": "^3.10.1",
     "mysql": "^2.9.0",
+    "request": "^2.61.0",
     "sequelize": "^3.6.0",
     "twitter": "^1.2.5"
   }
