--- a/package.json
+++ b/package.json
@@ -1,33 +1,19 @@
 {
-  "name": "populr2-worker",
-  "version": "2.0.0",
-  "description": "Webworker for Populr API v2",
-  "main": "dist/index.js",
-  "scripts": {
-    "postinstall": "npm run build",
-    "build": "babel src -d dist"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/persnickety-vagabond/populr2-Worker.git"
-  },
-  "author": "Garrett Cox",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/persnickety-vagabond/populr2-Worker/issues"
-  },
-  "homepage": "https://github.com/persnickety-vagabond/populr2-Worker#readme",
-  "engines": {
-    "node": "4.2.1"
+  "name": "populr2-Worker",
+  "version": "0.0.2",
+  "description": "Worker module for populr",
+  "main": "index.js",
+  "repository": "https://github.com/persnickety-vagabond/populr2-Worker.git",
+  "author": "Garrett Cox <garrettjcox@gmail.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb-base": "^11.0.1",
+    "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
-    "populr2-database": "git://github.com/persnickety-vagabond/populr2-Database.git",
-    "babel-cli": "^6.3.17",
-    "babel-preset-es2015": "^6.3.13",
-    "cheerio": "^0.19.0",
-    "lodash": "^3.10.1",
-    "loggerlite": "0.0.5",
-    "request": "^2.61.0",
-    "twitter": "^1.2.5"
+    "colorslite": "^0.0.3",
+    "populr2-Database": "https://github.com/persnickety-vagabond/populr2-Database.git",
+    "rc": "^1.1.6"
   }
 }
