--- a/.eslintrc
+++ b/.eslintrc
@@ -4,10 +4,15 @@
   },
   "globals": {
     "log": true,
-    "config": true
+    "config": true,
+    "db": true
   },
   "rules": {
-    "no-use-before-define": "off"
+    "no-use-before-define": "off",
+    "arrow-body-style": "off",
+    "no-return-assign": "off",
+    "no-param-reassign": "off",
+    "max-len": "off"
   },
   "extends": "airbnb-base"
 }
